objects/zkups__UPSPickup__c.object
<CustomObject>
    <customHelpPage>zkups__pickupHelp</customHelpPage>
    <description>UPS Pickup is a collection of data that represents the details of a scheduled UPS pickup</description>
    <fields>
        <fullName>zkups__City__c</fullName>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CloseTimeHour__c</fullName>
        <label>Close Time Hour</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CloseTimeMinute__c</fullName>
        <label>Close Time Minute</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CompanyName__c</fullName>
        <label>Company Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ContactName__c</fullName>
        <label>Contact Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CountryCode__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Floor__c</fullName>
        <label>Floor</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__GrandTotalOfAllCharge__c</fullName>
        <label>Grand Total of All Charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkups__IsResidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PRN__c</fullName>
        <label>PRN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkups__PickupCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pickup Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__PickupDate__c</fullName>
        <label>Pickup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkups__PickupPoint__c</fullName>
        <label>Pickup Point</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReadyTimeHour__c</fullName>
        <label>Ready Time Hour</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReadyTimeMinute__c</fullName>
        <label>Ready Time Minute</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReferenceNumber__c</fullName>
        <label>Reference Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Room__c</fullName>
        <label>Room</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SpecialInstruction__c</fullName>
        <label>Special Instruction</label>
        <length>57</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__State__c</fullName>
        <label>State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkups__TotalTax__c</fullName>
        <label>Total Tax</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkups__UPSShipmatePreference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPS Shipmate Preference</label>
        <referenceTo>zkups__UPSShipmatePreference__c</referenceTo>
        <relationshipLabel>UPS Pickups</relationshipLabel>
        <relationshipName>UPSPickups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UPS Pickup</label>
    <listViews>
        <fullName>zkups__All</fullName>
        <columns>NAME</columns>
        <columns>zkups__PickupCancelled__c</columns>
        <columns>zkups__PickupDate__c</columns>
        <columns>zkups__Street__c</columns>
        <columns>zkups__City__c</columns>
        <columns>zkups__State__c</columns>
        <columns>zkups__PostalCode__c</columns>
        <columns>zkups__CountryCode__c</columns>
        <columns>zkups__PickupPoint__c</columns>
        <columns>zkups__GrandTotalOfAllCharge__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UPS-PICKUP-{000000}</displayFormat>
        <label>UPS Pickup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Pickups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>